feat: :lipstick: Add sack total value in caravan cargo

--- a/lang/en.json
+++ b/lang/en.json
@@ -382,7 +382,7 @@
   "SDM.FavoriteSkill": "Favorite Skill",
   "SDM.FeatureVersatile": "versatile",
   "SDM.FieldAbilitiesPl": "Abilities",
-  "SDM.FieldAgent": "Agent",
+  "SDM.FieldAgent": "Agent (Fee)",
   "SDM.FieldArmor": "Armor",
   "SDM.FieldBiography": "Biography",
   "SDM.FieldBonus": "Bonus",
@@ -412,8 +412,7 @@
   "SDM.FieldLife": "Remaining Life",
   "SDM.FieldLifeMax": "Life",
   "SDM.FieldLikes": "Likes",
-  "SDM.FieldLocationA": "Location A",
-  "SDM.FieldLocationB": "Location B",
+  "SDM.FieldLocation": "Location {letter} / Goods {letter}",
   "SDM.FieldLooks": "Looks",
   "SDM.FieldMentalDefense": "Mental Defense",
   "SDM.FieldMotto": "Motto",
