--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -382,7 +382,7 @@
   "SDM.FavoriteSkill": "Perícia Favorita",
   "SDM.FeatureVersatile": "versátil",
   "SDM.FieldAbilitiesPl": "Atributos",
-  "SDM.FieldAgent": "Agente",
+  "SDM.FieldAgent": "Agente (Taxa)",
   "SDM.FieldArmor": "Armadura",
   "SDM.FieldBiography": "Biografia",
   "SDM.FieldBonus": "Bônus",
@@ -412,8 +412,8 @@
   "SDM.FieldLife": "Vida Restante",
   "SDM.FieldLifeMax": "Vida",
   "SDM.FieldLikes": "Gostos",
-  "SDM.FieldLocationA": "Origem",
-  "SDM.FieldLocationB": "Destino",
+  "SDM.FieldLocationA": "Local A / Mercadorias A",
+  "SDM.FieldLocationB": "Local B / Mercadorias B",
   "SDM.FieldLooks": "Aparência",
   "SDM.FieldMentalDefense": "Defesa Mental",
   "SDM.FieldMotto": "Lema",
