feat: :sparkles: Improved caravan cargo tab

--- a/lang/en.json
+++ b/lang/en.json
@@ -270,6 +270,7 @@
   "SDM.ButtonRoll": "Roll",
   "SDM.ButtonSave": "Save Changes",
   "SDM.ButtonYes": "Yes",
+  "SDM.CaravanItemSlots": "Caravan Items",
   "SDM.CashManagement": "Cash Management",
   "SDM.CashManagementAddMoney": "Give Money",
   "SDM.CashManagementCompleted": "Cash transfer successful for {number} character(s)!",
@@ -587,6 +588,7 @@
   "SDM.RollType": "{type} Roll",
   "SDM.RollUseHeroDice": "Use Hero Dice",
   "SDM.Route": "route",
+  "SDM.SackOverflow": "Overflow",
   "SDM.SavingThrowDoom": "DOOM",
   "SDM.SavingThrowDoomMessage": "What was, will be. No save.",
   "SDM.SavingThrowRoll": "{ability} Saving Throw",
@@ -668,6 +670,7 @@
   "SDM.SpeedVeryVerySlow": "Very Very Slow (-3)",
   "SDM.StatusBlind": "blind",
   "SDM.StatusEncumbered": "encumbered",
+  "SDM.StatusOverloaded": "overloaded",
   "SDM.StatusSlow": "slow",
   "SDM.Success": "Success",
   "SDM.TabBiography": "Biography",
