--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -270,6 +270,7 @@
   "SDM.ButtonRoll": "Rolar",
   "SDM.ButtonSave": "Salvar",
   "SDM.ButtonYes": "Sim",
+  "SDM.CaravanItemSlots": "Itens da Caravana",
   "SDM.CashManagement": "Gestão de Dinheiro",
   "SDM.CashManagementAddMoney": "Adicionar Dinheiro",
   "SDM.CashManagementCompleted": "Transferência concluída para {number} personagem(ns)!",
@@ -412,8 +413,7 @@
   "SDM.FieldLife": "Vida Restante",
   "SDM.FieldLifeMax": "Vida",
   "SDM.FieldLikes": "Gostos",
-  "SDM.FieldLocationA": "Local A / Mercadorias A",
-  "SDM.FieldLocationB": "Local B / Mercadorias B",
+  "SDM.FieldLocation": "Local {letter} / Mercadorias {letter}",
   "SDM.FieldLooks": "Aparência",
   "SDM.FieldMentalDefense": "Defesa Mental",
   "SDM.FieldMotto": "Lema",
@@ -588,6 +588,7 @@
   "SDM.RollType": "Rolagem de {type}",
   "SDM.RollUseHeroDice": "Usar Dados Heróicos",
   "SDM.Route": "rota",
+  "SDM.SackOverflow": "em Excesso",
   "SDM.SavingThrowDoom": "PERDIÇÃO",
   "SDM.SavingThrowDoomMessage": "O que foi, será. Não há salvação.",
   "SDM.SavingThrowRoll": "Salvaguarda de {ability}",
@@ -669,6 +670,7 @@
   "SDM.SpeedVeryVerySlow": "Muito Muito Lento",
   "SDM.StatusBlind": "cego",
   "SDM.StatusEncumbered": "sobrecarregado",
+  "SDM.StatusOverloaded": "sobrecarregado",
   "SDM.StatusSlow": "lento",
   "SDM.Success": "Sucesso",
   "SDM.TabBiography": "Biografia",
