feat: :sparkles: Add support to mark items as notched and broken

--- a/lang/en.json
+++ b/lang/en.json
@@ -260,6 +260,7 @@
   "SDM.BackgroundTraitCreated": "{flavor} {role} background trait created for {name} character!",
   "SDM.BiomagicalCorruption": "Biomagical Corruption",
   "SDM.brick-bastions": "Brick Bastions",
+  "SDM.BrokenItemAction": "<b>right-click</b>: repair item to notched",
   "SDM.BurdensPenalty": "Each burden imposes a -1 to all rolls",
   "SDM.ButtonApply": "Apply",
   "SDM.ButtonCancel": "Cancel",
@@ -467,6 +468,9 @@
   "SDM.ItemReadied": "Readied",
   "SDM.ItemSizeUnit": "Unit",
   "SDM.ItemSizeValue": "Size",
+  "SDM.ItemStatusBroken": "broken",
+  "SDM.ItemStatusNormal": "intact",
+  "SDM.ItemStatusNotched": "notched",
   "SDM.ItemTabAlbum": "Album",
   "SDM.ItemTabAttributes": "Attributes",
   "SDM.ItemTabDescription": "Description",
@@ -488,6 +492,8 @@
   "SDM.MoraleUnderOutcome": "Under Morale",
   "SDM.MoraleUnderOutcomeMessage": "The NPC continues to struggle, grimly determined, resolute for now.",
   "SDM.NoPowers": "Empty Album of Power",
+  "SDM.NormalItemAction": "<b>left-click</b>: mark item as notched",
+  "SDM.NotchedItemAction": "<b>left-click</b>: mark item as broken<br><b>right-click</b>: repair item",
   "SDM.Notes": "Notes",
   "SDM.NpcCr": "CR",
   "SDM.NPCCreated": "Random NPC {name}, level: {level} was created! ",
