--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -260,6 +260,7 @@
   "SDM.BackgroundTraitCreated": "Traço de antecedente {flavor} {role} criado para o personagem {name}!",
   "SDM.BiomagicalCorruption": "Corrupção Biomágica",
   "SDM.brick-bastions": "Bastiões de Tijolo",
+  "SDM.BrokenItemAction": "<b>clique-direito</b>: reparar item como danificado",
   "SDM.BurdensPenalty": "Cada fardo penaliza todas as rolagens em -1",
   "SDM.ButtonApply": "Aplicar",
   "SDM.ButtonCancel": "Cancelar",
@@ -467,6 +468,9 @@
   "SDM.ItemReadied": "Equipado",
   "SDM.ItemSizeUnit": "Unidade",
   "SDM.ItemSizeValue": "Tamanho",
+  "SDM.ItemStatusBroken": "quebrado",
+  "SDM.ItemStatusNormal": "Item está intacto",
+  "SDM.ItemStatusNotched": "danificado",
   "SDM.ItemTabAlbum": "Álbum",
   "SDM.ItemTabAttributes": "Atributos",
   "SDM.ItemTabDescription": "Descrição",
@@ -488,6 +492,8 @@
   "SDM.MoraleUnderOutcome": "Abaixo do Moral",
   "SDM.MoraleUnderOutcomeMessage": "O NPC continua lutando, com determinação sombria, resoluto por enquanto.",
   "SDM.NoPowers": "Álbum de Poderes Vazio",
+  "SDM.NormalItemAction": "<b>clique-esquerdo</b>: marca item como danificado",
+  "SDM.NotchedItemAction": "<b>clique-esquerdo</b>: marca item como quebrado<br><b>clique-direito</b>: repara item",
   "SDM.Notes": "Notas",
   "SDM.NpcCr": "ND",
   "SDM.NPCCreated": "NPC Randômico {name}, nível: {level} foi criado!",
