feat: :sparkles: Let clients change accent color for UI and sheets, WIP hallmark items

--- a/lang/en.json
+++ b/lang/en.json
@@ -260,7 +260,7 @@
   "SDM.BackgroundTraitCreated": "{flavor} {role} background trait created for {name} character!",
   "SDM.BiomagicalCorruption": "Biomagical Corruption",
   "SDM.brick-bastions": "Brick Bastions",
-  "SDM.BrokenItemAction": "<b>right-click</b>: repair item to notched",
+  "SDM.BrokenItemAction": "<b>right-click</b>: repair item back to notched",
   "SDM.BurdensPenalty": "Each burden imposes a -1 to all rolls",
   "SDM.ButtonApply": "Apply",
   "SDM.ButtonCancel": "Cancel",
@@ -352,6 +352,7 @@
   "SDM.erratic-expendables": " Erratic Expendables",
   "SDM.ErrorActorNoHeroDice": "{actor} has no hero dice available for this roll!",
   "SDM.ErrorCashManagementFailed": "An error has happened during cash transfer!",
+  "SDM.ErrorHallmarkLimit": "This would exceed {target} Hallmark items limit",
   "SDM.ErrorInvalidDiceFaces": "Invalid number of faces for a die: {faces}",
   "SDM.ErrorInvalidModifier": "Invalid roll modifier",
   "SDM.ErrorInvalidTarget": "Invalid target actor",
@@ -442,6 +443,7 @@
   "SDM.FrequencyWeek": "Week",
   "SDM.GearMaxPowers": "Max Stored Powers",
   "SDM.generic-synthesized-creature": "Generic Synthesized Creature",
+  "SDM.HallmarkItem": "Hallmark Item",
   "SDM.HealingHouseRule": "Healing House Rule",
   "SDM.HeroDice": "hero dice",
   "SDM.HeroDiceSpend": "{actor} spent {quantity} {diceLabel}",
