--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -260,7 +260,7 @@
   "SDM.BackgroundTraitCreated": "Traço de antecedente {flavor} {role} criado para o personagem {name}!",
   "SDM.BiomagicalCorruption": "Corrupção Biomágica",
   "SDM.brick-bastions": "Bastiões de Tijolo",
-  "SDM.BrokenItemAction": "<b>clique-direito</b>: reparar item como danificado",
+  "SDM.BrokenItemAction": "<b>clique-direito</b>: reparar item para o estado danificado",
   "SDM.BurdensPenalty": "Cada fardo penaliza todas as rolagens em -1",
   "SDM.ButtonApply": "Aplicar",
   "SDM.ButtonCancel": "Cancelar",
@@ -352,6 +352,7 @@
   "SDM.erratic-expendables": "Descartáveis Erráticos",
   "SDM.ErrorActorNoHeroDice": "{actor} não tem dados heróicos para esta rolagem!",
   "SDM.ErrorCashManagementFailed": "Erro durante transferência de dinheiro!",
+  "SDM.ErrorHallmarkLimit": "Isto excederia o limite de itens emblemáticos de {target}",
   "SDM.ErrorInvalidDiceFaces": "Número inválido de lados para dado: {faces}",
   "SDM.ErrorInvalidModifier": "Modificador de rolagem inválido",
   "SDM.ErrorInvalidTarget": "Alvo inválido",
@@ -442,6 +443,7 @@
   "SDM.FrequencyWeek": "Semana",
   "SDM.GearMaxPowers": "Máximo de Poderes",
   "SDM.generic-synthesized-creature": "Criatura Sintetizada Genérica",
+  "SDM.HallmarkItem": "Item Emblemático",
   "SDM.HealingHouseRule": "Regra de Cura",
   "SDM.HeroDice": "dados heróicos",
   "SDM.HeroDiceSpend": "{actor} gastou {quantity} {diceLabel}",
