feat: :sparkles: Add support to change UI accent color

--- a/lang/en.json
+++ b/lang/en.json
@@ -280,6 +280,23 @@
   "SDM.Cast": "Cast",
   "SDM.ChatContextDamage": "Apply as Damage",
   "SDM.ChatContextHealing": "Apply as Healing",
+  "SDM.ColorBlack": "Black",
+  "SDM.ColorBlue": "Blue",
+  "SDM.ColorBrown": "Brown",
+  "SDM.ColorCrimson": "Crimson",
+  "SDM.ColorEmerald": "Emerald",
+  "SDM.ColorGold": "Gold",
+  "SDM.ColorGreen": "Green",
+  "SDM.ColorOlive": "Olive",
+  "SDM.ColorOrange": "Orange",
+  "SDM.ColorPink": "Pink",
+  "SDM.ColorPurple": "Purple",
+  "SDM.ColorRed": "Red",
+  "SDM.ColorSilver": "Silver",
+  "SDM.ColorTeal": "Teal",
+  "SDM.ColorViolet": "Violet",
+  "SDM.ColorWhite": "White",
+  "SDM.ColorYellow": "Yellow",
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
   "SDM.Cost": "Cost",
   "SDM.CreateNPC": "Create NPC",
@@ -621,6 +638,8 @@
   "SDM.SettingsBaseSocialDefenseHint": "Base social defense value for characters",
   "SDM.SettingsBaseTraitSlots": "Base Trait Slots",
   "SDM.SettingsBaseTraitSlotsHint": "Base number of trait slots for a character",
+  "SDM.SettingsChromatype": "Chromatype",
+  "SDM.SettingsChromatypeHint": "Pick your chromatype in the light of the polychrom! (change UI highlight color)\nCheck Dice So Nice: 3D Dice Settings for a \"SDM Chromatype Dice\" theme",
   "SDM.SettingsCurrencyImg": "Currency image",
   "SDM.SettingsCurrencyImgHint": "Default image for new currency items created by the 'Give Cash' Referee Macro",
   "SDM.SettingsCurrencyName": "Currency name",
