--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -280,6 +280,23 @@
   "SDM.Cast": "Conjurar",
   "SDM.ChatContextDamage": "Aplicar como Dano",
   "SDM.ChatContextHealing": "Aplicar como Cura",
+  "SDM.ColorBlack": "Preto",
+  "SDM.ColorBlue": "Azul",
+  "SDM.ColorBrown": "Marrom",
+  "SDM.ColorCrimson": "Carmesim",
+  "SDM.ColorEmerald": "Esmeralda",
+  "SDM.ColorGold": "Dourado",
+  "SDM.ColorGreen": "Verde",
+  "SDM.ColorOlive": "Verde-oliva",
+  "SDM.ColorOrange": "Laranja",
+  "SDM.ColorPink": "Rosa",
+  "SDM.ColorPurple": "Roxo",
+  "SDM.ColorRed": "Vermelho",
+  "SDM.ColorSilver": "Prateado",
+  "SDM.ColorTeal": "Azul-petróleo",
+  "SDM.ColorViolet": "Violeta",
+  "SDM.ColorWhite": "Branco",
+  "SDM.ColorYellow": "Amarelo",
   "SDM.CombatantsExcluded": "Excluídos do combate: {names}",
   "SDM.Cost": "Custo",
   "SDM.CreateNPC": "Criar NPC",
@@ -621,6 +638,8 @@
   "SDM.SettingsBaseSocialDefenseHint": "Defesa social padrão",
   "SDM.SettingsBaseTraitSlots": "Espaços de Traços Base",
   "SDM.SettingsBaseTraitSlotsHint": "Número base de espaços de inventário para traços",
+  "SDM.SettingsChromatype": "Cromatipo",
+  "SDM.SettingsChromatypeHint": "Escolha seu cromatipo à luz do policromo! (altera a cor de destaque da interface)\nConfira no Dice So Nice: Configurações de Dados 3D para um tema \"SDM Chromatype Dice\"",
   "SDM.SettingsCurrencyImg": "Imagem padrão para itens de dinheiro",
   "SDM.SettingsCurrencyImgHint": "Imagem padrão usada pelo macro de transferência de dinheiro",
   "SDM.SettingsCurrencyName": "Nome da moeda",
