feat: :sparkles: Updated color pallets for chromatypes, finish adding hallmark items

--- a/lang/en.json
+++ b/lang/en.json
@@ -280,6 +280,7 @@
   "SDM.Cast": "Cast",
   "SDM.ChatContextDamage": "Apply as Damage",
   "SDM.ChatContextHealing": "Apply as Healing",
+  "SDM.ColorAqua": "Aqua",
   "SDM.ColorBlack": "Black",
   "SDM.ColorBlue": "Blue",
   "SDM.ColorBrown": "Brown",
@@ -294,6 +295,7 @@
   "SDM.ColorRed": "Red",
   "SDM.ColorSilver": "Silver",
   "SDM.ColorTeal": "Teal",
+  "SDM.ColorUltraviolet": "Ultraviolet",
   "SDM.ColorViolet": "Violet",
   "SDM.ColorWhite": "White",
   "SDM.ColorYellow": "Yellow",
@@ -369,7 +371,7 @@
   "SDM.erratic-expendables": " Erratic Expendables",
   "SDM.ErrorActorNoHeroDice": "{actor} has no hero dice available for this roll!",
   "SDM.ErrorCashManagementFailed": "An error has happened during cash transfer!",
-  "SDM.ErrorHallmarkLimit": "This would exceed {target} Hallmark items limit",
+  "SDM.ErrorHallmarkLimit": "This would exceed {target}'s hallmarks limit",
   "SDM.ErrorInvalidDiceFaces": "Invalid number of faces for a die: {faces}",
   "SDM.ErrorInvalidModifier": "Invalid roll modifier",
   "SDM.ErrorInvalidTarget": "Invalid target actor",
@@ -460,7 +462,7 @@
   "SDM.FrequencyWeek": "Week",
   "SDM.GearMaxPowers": "Max Stored Powers",
   "SDM.generic-synthesized-creature": "Generic Synthesized Creature",
-  "SDM.HallmarkItem": "Hallmark Item",
+  "SDM.HallmarkItem": "Hallmark",
   "SDM.HealingHouseRule": "Healing House Rule",
   "SDM.HeroDice": "hero dice",
   "SDM.HeroDiceSpend": "{actor} spent {quantity} {diceLabel}",
@@ -666,7 +668,7 @@
   "SDM.SettingsNPCInitiativeFormula": "NPC Initiative Formula",
   "SDM.SettingsNPCInitiativeFormulaHint": "Default initiative formula for NPCs",
   "SDM.SettingsReverseShiftKey": "Reverse Shift Key",
-  "SDM.SettingsReverseShiftKeyHint": "Reverse Shift+click behaviour in roll buttons.\n Checking this will require shift+click to open custom roll dialogs",
+  "SDM.SettingsReverseShiftKeyHint": "Reverse Shift+Click behavior in roll buttons.\nWhen enabled, using Shift+Click will be required to open custom roll dialogs.",
   "SDM.SettingsSavingThrowBaseRollFormula": "Base saving throw roll formula",
   "SDM.SettingsSavingThrowBaseRollFormulaHint": "Base roll formula for all saving throw rolls",
   "SDM.SettingsShouldPlayLevelUpSoundFx": "Play Level Up Sound Effect",
@@ -755,6 +757,7 @@
   "SDM.WeaponVersatileDamage": "Versatile Damage",
   "SDM.Wiki": "Wiki",
   "SDM.XPToGive": "XP to Give",
+  "SMD.ErrorHallmarkExperience": "Hallmark item has invested experience",
   "TYPE.Burden": "Burden",
   "TYPE.Effect": "Effect",
   "TYPE.Gear": "Gear",
