--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -280,6 +280,7 @@
   "SDM.Cast": "Conjurar",
   "SDM.ChatContextDamage": "Aplicar como Dano",
   "SDM.ChatContextHealing": "Aplicar como Cura",
+  "SDM.ColorAqua": "Água",
   "SDM.ColorBlack": "Preto",
   "SDM.ColorBlue": "Azul",
   "SDM.ColorBrown": "Marrom",
@@ -294,6 +295,7 @@
   "SDM.ColorRed": "Vermelho",
   "SDM.ColorSilver": "Prateado",
   "SDM.ColorTeal": "Azul-petróleo",
+  "SDM.ColorUltraviolet": "Ultravioleta",
   "SDM.ColorViolet": "Violeta",
   "SDM.ColorWhite": "Branco",
   "SDM.ColorYellow": "Amarelo",
@@ -460,7 +462,7 @@
   "SDM.FrequencyWeek": "Semana",
   "SDM.GearMaxPowers": "Máximo de Poderes",
   "SDM.generic-synthesized-creature": "Criatura Sintetizada Genérica",
-  "SDM.HallmarkItem": "Item Emblemático",
+  "SDM.HallmarkItem": "Emblemático",
   "SDM.HealingHouseRule": "Regra de Cura",
   "SDM.HeroDice": "dados heróicos",
   "SDM.HeroDiceSpend": "{actor} gastou {quantity} {diceLabel}",
@@ -755,6 +757,7 @@
   "SDM.WeaponVersatileDamage": "Dano versátil",
   "SDM.Wiki": "Wiki",
   "SDM.XPToGive": "EXP para Distribuir",
+  "SMD.ErrorHallmarkExperience": "Este item emblemático possui experiência investida",
   "TYPE.Burden": "Fardo",
   "TYPE.Effect": "Efeito",
   "TYPE.Gear": "Equipamento",
