fix: :bug: Fix sdm compatible logo appearing unintentionally on character sheets

--- a/lang/en.json
+++ b/lang/en.json
@@ -318,6 +318,7 @@
   "SDM.DistributeXP": "Distribute XP",
   "SDM.DOCUMENT.Create": "Create {type}",
   "SDM.DOCUMENT.New": "New {type}",
+  "SDM.DSNChromatypeSame": "Same as the Chromatype",
   "SDM.Effect.ChangeProperty": "Property",
   "SDM.Effect.Inactive": "Inactive",
   "SDM.Effect.Passive": "Passive",
@@ -654,6 +655,8 @@
   "SDM.SettingsDefaultMaxPowersHint": "Default maximum number of stored powers in an album of power",
   "SDM.SettingsDefaultSaveValue": "Initial Save Value",
   "SDM.SettingsDefaultSaveValueHint": "The initial value of save, the target value for saving throw rolls",
+  "SDM.SettingsDiceSoNiceChromatype": "Dice So Nice Chromatype Color",
+  "SDM.SettingsDiceSoNiceChromatypeHint": "Allows you to use a different Chromatype color just for your 3D dice",
   "SDM.SettingsEscalatorDie": "Escalator Die",
   "SDM.SettingsEscalatorDieHint": "Every roll will be increased by this amount",
   "SDM.SettingsExtendedSkillRanks": "Use extra skill ranks",
