--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -318,6 +318,7 @@
   "SDM.DistributeXP": "Distribuir EXP",
   "SDM.DOCUMENT.Create": "Criar {type}",
   "SDM.DOCUMENT.New": "Novo {type}",
+  "SDM.DSNChromatypeSame": "Mesma do Cromatipo",
   "SDM.Effect.ChangeProperty": "Propriedade",
   "SDM.Effect.Inactive": "Inativo",
   "SDM.Effect.Passive": "Passivo",
@@ -654,6 +655,8 @@
   "SDM.SettingsDefaultMaxPowersHint": "Número máximo padrão de poderes armazenados em um álbum de poderes",
   "SDM.SettingsDefaultSaveValue": "Valor inicial de Salvaguarda",
   "SDM.SettingsDefaultSaveValueHint": "Valor inicial de Salvaguarda, número alvo para rolagens de Salvaguarda",
+  "SDM.SettingsDiceSoNiceChromatype": "Cor do Cromatipo para o Dice so Nice",
+  "SDM.SettingsDiceSoNiceChromatypeHint": "Permite que você use um Cromatipo diferente apenas para os seus dados 3D",
   "SDM.SettingsEscalatorDie": "Dado de Intensidade",
   "SDM.SettingsEscalatorDieHint": "Bônus aplicado a todas as rolagens",
   "SDM.SettingsExtendedSkillRanks": "Usar ranques extras de perícias",
