feat: :sparkles: Allow gms to extract powers from an album of power

--- a/lang/en.json
+++ b/lang/en.json
@@ -288,6 +288,7 @@
   "SDM.ColorEmerald": "Emerald",
   "SDM.ColorGold": "Gold",
   "SDM.ColorGreen": "Green",
+  "SDM.ColorLime": "Lime",
   "SDM.ColorOlive": "Olive",
   "SDM.ColorOrange": "Orange",
   "SDM.ColorPink": "Pink",
@@ -401,6 +402,8 @@
   "SDM.ExperienceDistribution": "XP Distribution",
   "SDM.ExperienceDistributionCompleted": "Distributed {xp} XP to {number} character(s)!",
   "SDM.ExplodingDice": "Exploding Dice",
+  "SDM.ExtractPower": "Extract Power",
+  "SDM.ExtractPowerTooltip": "Copy this power to a new power gear in the items sidebar",
   "SDM.Failure": "Failure",
   "SDM.FavoriteSkill": "Favorite Skill",
   "SDM.FeatureVersatile": "versatile",
@@ -513,7 +516,7 @@
   "SDM.MoraleOverOutcomeMessage": "The NPC breaks: flees, retreats, surrenders or ends combat in some other way. The better trained, the steadier the withdrawal.",
   "SDM.MoraleUnderOutcome": "Under Morale",
   "SDM.MoraleUnderOutcomeMessage": "The NPC continues to struggle, grimly determined, resolute for now.",
-  "SDM.NoPowers": "Empty Album of Power",
+  "SDM.NoPowers": "Empty Power Album. Add powers by dragging and dropping a Power gear, or by clicking +New Power",
   "SDM.NormalItemAction": "<b>left-click</b>: mark item as notched",
   "SDM.NotchedItemAction": "<b>left-click</b>: mark item as broken<br><b>right-click</b>: repair item",
   "SDM.Notes": "Notes",
@@ -560,6 +563,7 @@
   "SDM.PowerDescription": "Description",
   "SDM.PowerDuration": "Duration",
   "SDM.PowerDurationAbbr": "D",
+  "SDM.PowerExtractionComplete": "Power {power} was successfully copied from {power_album}",
   "SDM.PowerLevel": "Power Level",
   "SDM.PowerLevelAbbr": "P",
   "SDM.PowerName": "Name",
