--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -288,6 +288,7 @@
   "SDM.ColorEmerald": "Esmeralda",
   "SDM.ColorGold": "Dourado",
   "SDM.ColorGreen": "Verde",
+  "SDM.ColorLime": "Verde Neon",
   "SDM.ColorOlive": "Verde-oliva",
   "SDM.ColorOrange": "Laranja",
   "SDM.ColorPink": "Rosa",
@@ -401,6 +402,8 @@
   "SDM.ExperienceDistribution": "Distribuição de EXP",
   "SDM.ExperienceDistributionCompleted": "{xp} EXP distribuídos para {number} personagem(ns)!",
   "SDM.ExplodingDice": "Dados Explosivos",
+  "SDM.ExtractPower": "Extrair Power",
+  "SDM.ExtractPowerTooltip": "Copia este poder para um novo equipamento de poder na aba de itens",
   "SDM.Failure": "Falha",
   "SDM.FavoriteSkill": "Perícia Favorita",
   "SDM.FeatureVersatile": "versátil",
@@ -513,7 +516,7 @@
   "SDM.MoraleOverOutcomeMessage": "O NPC entra em colapso: foge, recua, rende-se ou encerra o combate de outra forma. Quanto melhor treinado, mais organizada será a retirada.",
   "SDM.MoraleUnderOutcome": "Abaixo do Moral",
   "SDM.MoraleUnderOutcomeMessage": "O NPC continua lutando, com determinação sombria, resoluto por enquanto.",
-  "SDM.NoPowers": "Álbum de Poderes Vazio",
+  "SDM.NoPowers": "Álbum de Poderes Vazio. Adicione poderes arrastando e soltando equipamentos de Poder, ou clicando em +Novo Poder",
   "SDM.NormalItemAction": "<b>clique-esquerdo</b>: marca item como danificado",
   "SDM.NotchedItemAction": "<b>clique-esquerdo</b>: marca item como quebrado<br><b>clique-direito</b>: repara item",
   "SDM.Notes": "Notas",
@@ -560,6 +563,7 @@
   "SDM.PowerDescription": "Descrição",
   "SDM.PowerDuration": "Duração",
   "SDM.PowerDurationAbbr": "Dur",
+  "SDM.PowerExtractionComplete": "Poder {power} extraído com sucesso de {power_album}",
   "SDM.PowerLevel": "Nível",
   "SDM.PowerLevelAbbr": "N",
   "SDM.PowerName": "Nome",
@@ -696,7 +700,7 @@
   "SDM.SkillSkilled": "Treinado",
   "SDM.SpeedFast": "Rápido",
   "SDM.SpeedSlow": "Lento",
-  "SDM.SpeedStandard": "Padrão",
+  "SDM.SpeedStandard": "Normal",
   "SDM.SpeedVeryFast": "Muito Rápido",
   "SDM.SpeedVerySlow": "Muito Lento",
   "SDM.SpeedVeryVerySlow": "Muito Muito Lento",
