--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -259,6 +259,7 @@
   "SDM.BackgroundTask": "Tarefa",
   "SDM.BackgroundTraitCreated": "Traço de antecedente {flavor} {role} criado para o personagem {name}!",
   "SDM.BiomagicalCorruption": "Corrupção Biomágica",
+  "SDM.BlindRoll": "Cega pro Mestre",
   "SDM.brick-bastions": "Bastiões de Tijolo",
   "SDM.BrokenItemAction": "<b>clique-direito</b>: reparar item para o estado danificado",
   "SDM.BurdensPenalty": "Cada fardo penaliza todas as rolagens em -1",
@@ -616,7 +617,7 @@
   "SDM.RollModifiers": "Modificadores",
   "SDM.RollMultiplier": "Multiplicador",
   "SDM.RollNormal": "normal",
-  "SDM.RollTitle": "Rolagem de {prefix}: {title}",
+  "SDM.RollTitle": "Rolagem {prefix}: {title}",
   "SDM.RollType": "Rolagem de {type}",
   "SDM.RollUseHeroDice": "Usar Dados Heróicos",
   "SDM.Route": "rota",
