fix: :bug: Add missing i18n to referee buttons in the token controls menu

--- a/lang/en.json
+++ b/lang/en.json
@@ -467,6 +467,11 @@
   "SDM.FrequencyWeek": "Week",
   "SDM.GearMaxPowers": "Max Stored Powers",
   "SDM.generic-synthesized-creature": "Generic Synthesized Creature",
+  "SDM.GMGenerateRandomNPC": "Generate Random NPC",
+  "SDM.GMGiveCash": "Give/Take Cash",
+  "SDM.GMGiveExperience": "Give Experience",
+  "SDM.GMGiveHeroDice": "Give Hero Dice",
+  "SDM.GMGroupInitiative": "Group Initiative",
   "SDM.HallmarkItem": "Hallmark",
   "SDM.HealingHouseRule": "Healing House Rule",
   "SDM.HeroDice": "hero dice",
