--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -467,6 +467,11 @@
   "SDM.FrequencyWeek": "Semana",
   "SDM.GearMaxPowers": "Máximo de Poderes",
   "SDM.generic-synthesized-creature": "Criatura Sintetizada Genérica",
+  "SDM.GMGenerateRandomNPC": "Gerar NPC Aleatório",
+  "SDM.GMGiveCash": "Distribuir/Cobrar Dinheiro",
+  "SDM.GMGiveExperience": "Distribuir Experiência",
+  "SDM.GMGiveHeroDice": "Distribuir Dado Heróico",
+  "SDM.GMGroupInitiative": "Iniciativa em Grupo",
   "SDM.HallmarkItem": "Emblemático",
   "SDM.HealingHouseRule": "Regra de Cura",
   "SDM.HeroDice": "dados heróicos",
