feat: :sparkles: Allow users to add bonus hero dice when modifying a roll

--- a/lang/en.json
+++ b/lang/en.json
@@ -260,6 +260,7 @@
   "SDM.BackgroundTraitCreated": "{flavor} {role} background trait created for {name} character!",
   "SDM.BiomagicalCorruption": "Biomagical Corruption",
   "SDM.BlindRoll": "Blind GM",
+  "SDM.BonusHeroDice": "Bonus Hero Dice",
   "SDM.brick-bastions": "Brick Bastions",
   "SDM.BrokenItemAction": "<b>right-click</b>: repair item back to notched",
   "SDM.BurdensPenalty": "Each burden imposes a -1 to all rolls",
@@ -472,9 +473,11 @@
   "SDM.GMGiveExperience": "Give Experience",
   "SDM.GMGiveHeroDice": "Give Hero Dice",
   "SDM.GMGroupInitiative": "Group Initiative",
+  "SDM.GroupInitiativeErrorNoTokens": "Select all tokens that will be part of the encounter. No need to create the encounter beforehand.",
   "SDM.HallmarkItem": "Hallmark",
   "SDM.HealingHouseRule": "Healing House Rule",
   "SDM.HeroDice": "hero dice",
+  "SDM.HeroDiceHealingTip": "<b>Left-click</b>: roll Hero Dice for healing<br><b>Right-click</b>: spend Hero Dice without rolling",
   "SDM.HeroDiceSpend": "{actor} spent {quantity} {diceLabel}",
   "SDM.HeroDie": "hero die",
   "SDM.humans-of-the-pananthropy": " Humans of the Pananthropy",
@@ -769,6 +772,7 @@
   "SDM.WeaponVersatile": "Versatile",
   "SDM.WeaponVersatileDamage": "Versatile Damage",
   "SDM.Wiki": "Wiki",
+  "SDM.WithoutRollingDice": "Without Rolling!",
   "SDM.XPToGive": "XP to Give",
   "SMD.ErrorHallmarkExperience": "Hallmark item has invested experience",
   "TYPE.Burden": "Burden",
