--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -260,6 +260,7 @@
   "SDM.BackgroundTraitCreated": "Traço de antecedente {flavor} {role} criado para o personagem {name}!",
   "SDM.BiomagicalCorruption": "Corrupção Biomágica",
   "SDM.BlindRoll": "Cega pro Mestre",
+  "SDM.BonusHeroDice": "Dados Heróicos Bonus",
   "SDM.brick-bastions": "Bastiões de Tijolo",
   "SDM.BrokenItemAction": "<b>clique-direito</b>: reparar item para o estado danificado",
   "SDM.BurdensPenalty": "Cada fardo penaliza todas as rolagens em -1",
@@ -472,9 +473,11 @@
   "SDM.GMGiveExperience": "Distribuir Experiência",
   "SDM.GMGiveHeroDice": "Distribuir Dado Heróico",
   "SDM.GMGroupInitiative": "Iniciativa em Grupo",
+  "SDM.GroupInitiativeErrorNoTokens": "Selecione todos os tokens que farão parte do encontro. Não há necessidade de criar o encontro previamente.",
   "SDM.HallmarkItem": "Emblemático",
   "SDM.HealingHouseRule": "Regra de Cura",
   "SDM.HeroDice": "dados heróicos",
+  "SDM.HeroDiceHealingTip": "<b>clique-esquerdo</b>: role dados heróicos para se curar<br><b>clique-direito</b>: gaste dados heróicos sem rolagem",
   "SDM.HeroDiceSpend": "{actor} gastou {quantity} {diceLabel}",
   "SDM.HeroDie": "dado heróico",
   "SDM.humans-of-the-pananthropy": "Humanos da Panantrópia",
@@ -769,6 +772,7 @@
   "SDM.WeaponVersatile": "Versátil",
   "SDM.WeaponVersatileDamage": "Dano versátil",
   "SDM.Wiki": "Wiki",
+  "SDM.WithoutRollingDice": "Sem Rolagem!",
   "SDM.XPToGive": "EXP para Distribuir",
   "SMD.ErrorHallmarkExperience": "Este item emblemático possui experiência investida",
   "TYPE.Burden": "Fardo",
