feat: :memo: Update readed, 3d dice font scale and macros script code to call internal API

--- a/lang/en.json
+++ b/lang/en.json
@@ -291,6 +291,7 @@
   "SDM.ColorGold": "Gold",
   "SDM.ColorGreen": "Green",
   "SDM.ColorLime": "Lime",
+  "SDM.ColorNeonPurple": "Neon Purple",
   "SDM.ColorOlive": "Olive",
   "SDM.ColorOrange": "Orange",
   "SDM.ColorPink": "Pink",
