--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -291,6 +291,7 @@
   "SDM.ColorGold": "Dourado",
   "SDM.ColorGreen": "Verde",
   "SDM.ColorLime": "Verde Neon",
+  "SDM.ColorNeonPurple": "Roxo Neon",
   "SDM.ColorOlive": "Verde-oliva",
   "SDM.ColorOrange": "Laranja",
   "SDM.ColorPink": "Rosa",
