feat: :sparkles: Clean inventory UI, right-click to open a context menu with many actions

--- a/lang/en.json
+++ b/lang/en.json
@@ -319,6 +319,7 @@
   "SDM.DeleteDocConfirmation": "Delete {doc} permanently?",
   "SDM.DeletePower": "Delete Power",
   "SDM.DepletedResources": "Last ammo, one remains",
+  "SDM.DiceDiscarded": "discarded",
   "SDM.DistributeXP": "Distribute XP",
   "SDM.DOCUMENT.Create": "Create {type}",
   "SDM.DOCUMENT.New": "New {type}",
@@ -488,6 +489,12 @@
   "SDM.InventoryItems": "Items",
   "SDM.InventoryTraits": "Traits",
   "SDM.Issues": "Issues",
+  "SDM.Item.Broken": "Mark as Broken",
+  "SDM.Item.Delete": "Delete",
+  "SDM.Item.Notched": "Mark as Notched",
+  "SDM.Item.Repair": "Repair",
+  "SDM.Item.Share": "Share",
+  "SDM.Item.View": "View",
   "SDM.ItemArmor": "Armor",
   "SDM.ItemArmorType": "Type",
   "SDM.ItemCost": "Unit Cost (€)",
