--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -319,6 +319,7 @@
   "SDM.DeleteDocConfirmation": "Deletar {doc} permanentemente?",
   "SDM.DeletePower": "Deletar Poder",
   "SDM.DepletedResources": "Última bala, resta uma",
+  "SDM.DiceDiscarded": "descartado",
   "SDM.DistributeXP": "Distribuir EXP",
   "SDM.DOCUMENT.Create": "Criar {type}",
   "SDM.DOCUMENT.New": "Novo {type}",
@@ -488,6 +489,12 @@
   "SDM.InventoryItems": "Itens",
   "SDM.InventoryTraits": "Traços",
   "SDM.Issues": "Problemas",
+  "SDM.Item.Broken": "Marcar como Quebrado",
+  "SDM.Item.Delete": "Excluir",
+  "SDM.Item.Notched": "Marcar como Danificado",
+  "SDM.Item.Repair": "Reparar",
+  "SDM.Item.Share": "Compartilhar",
+  "SDM.Item.View": "Visualizar",
   "SDM.ItemArmor": "Armadura",
   "SDM.ItemArmorType": "Tipo",
   "SDM.ItemCost": "Custo Unitário (€)",
