feat: :sparkles: Add support to starting kit gear items

--- a/lang/en.json
+++ b/lang/en.json
@@ -469,6 +469,8 @@
   "SDM.FrequencyDay": "Day",
   "SDM.FrequencyWeek": "Week",
   "SDM.GearMaxPowers": "Max Stored Powers",
+  "SDM.GearStartingKit": "Starting Kit",
+  "SDM.GearStartingKitRemainingItems": "Remaining Items",
   "SDM.generic-synthesized-creature": "Generic Synthesized Creature",
   "SDM.GMGenerateRandomNPC": "Generate Random NPC",
   "SDM.GMGiveCash": "Give/Take Cash",
@@ -494,6 +496,7 @@
   "SDM.Item.Notched": "Mark as Notched",
   "SDM.Item.Repair": "Repair",
   "SDM.Item.Share": "Share",
+  "SDM.Item.Unpack": "Unpack Item",
   "SDM.Item.View": "View",
   "SDM.ItemArmor": "Armor",
   "SDM.ItemArmorType": "Type",
