--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -469,6 +469,8 @@
   "SDM.FrequencyDay": "Dia",
   "SDM.FrequencyWeek": "Semana",
   "SDM.GearMaxPowers": "Máximo de Poderes",
+  "SDM.GearStartingKit": "Kit Inicial",
+  "SDM.GearStartingKitRemainingItems": "Itens Restantes",
   "SDM.generic-synthesized-creature": "Criatura Sintetizada Genérica",
   "SDM.GMGenerateRandomNPC": "Gerar NPC Aleatório",
   "SDM.GMGiveCash": "Distribuir/Cobrar Dinheiro",
@@ -494,6 +496,7 @@
   "SDM.Item.Notched": "Marcar como Danificado",
   "SDM.Item.Repair": "Reparar",
   "SDM.Item.Share": "Compartilhar",
+  "SDM.Item.Unpack": "Desempacotar Item",
   "SDM.Item.View": "Visualizar",
   "SDM.ItemArmor": "Armadura",
   "SDM.ItemArmorType": "Tipo",
